BVHD-44 Added tab highlight, refactored code for ease of readability, replaced download icon with phone number to remove download modal open bug

--- a/vhd/src/style/sidebar.css
+++ b/vhd/src/style/sidebar.css
@@ -33,7 +33,7 @@
     align-items: center;
 }
 
-.sideNavTabActive{
+.sidebar-link-active{
     background-color: #D9D9D9;
     border-radius: 25px;
 }
